--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -2,18 +2,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape = "rectangle">
-            <stroke
-                android:width="2dp"
-                android:color="#000000"/>
-            <solid android:color="#BF360C"/>
-            <corners android:radius="10dp" />
+            <solid android:color="#886b4a"/>
+            <corners android:radius="6dp" />
 
         </shape>
     </item>
 
     <item>
-        android:bottom = "4dp"
-        android:top="4dp"
         <shape android:shape="rectangle">
         </shape>
     </item>
