--- a/app/src/main/res/drawable/block_background.xml
+++ b/app/src/main/res/drawable/block_background.xml
@@ -3,10 +3,10 @@
     <item>
         <shape android:shape = "rectangle">
             <stroke
-                android:width="2dp"
+                android:width="1.5dp"
                 android:color="#000000"/>
-            <solid android:color="#BF360C"/>
-            <corners android:radius="10dp" />
+            <solid android:color="#e6a545"/>
+            <corners android:radius="6dp" />
 
         </shape>
     </item>
