--- a/app/src/main/res/drawable/target_block_background.xml
+++ b/app/src/main/res/drawable/target_block_background.xml
@@ -5,8 +5,8 @@
             <stroke
                 android:width="2dp"
                 android:color="#000000"/>
-            <solid android:color="#F50057"/>
-            <corners android:radius="10dp" />
+            <solid android:color="#d80203"/>
+            <corners android:radius="6dp" />
 
         </shape>
     </item>
